<resources>
    <string name="app_name">EasyCalculator</string>
    <string name="_0">0</string>
    <string name="c">C</string>
    <string name="open_bracket">(</string>
    <string name="closed_bracket">)</string>
    <string name="divided">/</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="add">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="subtract">-</string>
    <string name="clear_everything">CE</string>
    <string name="dot">.</string>
    <string name="equals">=</string>
    <string name="infinityError">Cannot divide by 0</string>
    <string name="dotError">Only one \'.\'</string>
    <string name="_1_x">1/x</string>
    <string name="squareRoot">√</string>
    <string name="plus_minus">+/-</string>
    <string name="percentage">%</string>
</resources>